[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tb-utils"
dynamic = ["version"]
description = "Trading Bot Utilities Library"
readme = "README.md"
authors = [
    {name = "Abhishake Gupta", email = "letspython3.x@gmail.com"},
]
maintainers = [
    {name = "NX-Trade Codams", email = "letspython3.x@gmail.com"},
]
requires-python = ">=3.13"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Office/Business :: Financial :: Investment",
]
keywords = ["trading", "bot", "finance", "stock market", "algorithmic trading"]
dependencies = [
    "sqlalchemy>=2.0.48",
    "alembic>=1.18.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "requests>=2.32.5",
    "urllib3>=2.6.3",
]

[project.urls]
"Homepage" = "https://github.com/letspython3x/tb_utils"
"Bug Tracker" = "https://github.com/letspython3x/tb_utils/issues"
"Documentation" = "https://github.com/letspython3x/tb_utils/wiki"
"Source Code" = "https://github.com/letspython3x/tb_utils"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.3.0",
    "pre-commit>=3.0.0",
    "pylint>=3.0.3",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.scripts]
tb-utils = "tb_utils.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "tb_utils.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["tb_utils*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(\n  \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=tb_utils --cov-report=term-missing"

[tool.coverage.run]
source = ["tb_utils"]
omit = ["tests/*", "setup.py"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["alembic"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade, B: flake8-bugbear
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",   # line too long — handled by black
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends)
    "B904",   # within except clause, raise from
]

[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["F401", "E402"]

[tool.pylint.main]
# Ignore the following directories
ignore = ["CVS", ".git", ".pytest_cache", "dist", "build", "venv", ".venv", "alembic"]
jobs = 0
persistent = "yes"
load-plugins = ["pylint.extensions.docparams"]

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "E0401",  # import-error
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0511",  # fixme
    "R0801",  # duplicate-code
    "E0611",  # no-name-in-module
    "E1102",  # not-callable (false positive for func.now)
    "R0917",  # too-many-positional-arguments
    "W3101",  # missing-timeout
    "W0718",  # broad-exception-caught
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.reports]
output-format = "colorized"

[tool.pylint.design]
max-args = 7
max-attributes = 10
max-locals = 20
max-returns = 6
max-branches = 12
max-statements = 50
max-parents = 7
