[metadata]
name = tb-utils
description = Trading Bot Utilities Library
long_description = file: README.md, ChangeLog
author = Abhishake Gupta
author_email = letspython3.x@gmail.com
maintainer = LetsPython3.x
maintainer_email = letspython3.x@gmail.com
url = https://github.com/letspython3x/tb_utils
keywords = TradingBot, letspython, trading, algorithmic, postgresql, pydantic
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.8
package_dir=
    =src
packages=find:
install_requires =
    fastapi>=0.109.0
    uvicorn>=0.27.0
    sqlalchemy>=2.0.25
    alembic>=1.13.1
    psycopg2-binary>=2.9.9
    pydantic>=2.5.3
    pydantic-settings>=2.1.0
    requests>=2.31.0
    urllib3>=2.1.0

[options.extras_require]
dev =
    black>=23.12.1
    flake8
    flake8-docstrings
    isort>=5.12.0
    pre-commit
    pylint>=3.0.0

[options.packages.find]
where=src

[tool:wheel]
universal = 1

[flake8]
exclude =
    venv,
    .tox,
    .git,
    __pycache__,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
max-line-length = 80

[tox:tox]
envlist = py38,unittest,lint

[testenv]
basepython=python3.8
deps =
    ipython
    pylint
    pytest
    pytest-cov
    pytest-xdist
    flake8
    flake8-docstrings

#testenv:unittest]
#ommands=
#   pytest -v -s -n auto -l --cov=bsapilib --cov-report term-missing --cov-report xml --no-cov-on-fail tests/unit

[testenv:lint]
commands=
    flake8 src/tb-utils
    pylint src/tb-utils
