[metadata]
name = tb-utils
description = Trading Bot Utilities Library
long_description = file: README.md, ChangeLog
author = Abhishake Gupta
author_email = letspython3.x@gmail.com
maintainer = LetsPython3.x
maintainer_email = letspython3.x@gmail.com
url = https://github.com/letspython3x/tb_utils
keywords = TradingBot, letspython, trading, algorithmic, postgresql, pydantic
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.13

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.13
package_dir=
    =src
packages=find:
install_requires =
    sqlalchemy>=2.0.48
    alembic>=1.18.4
    psycopg2-binary>=2.9.11
    pydantic>=2.12.5
    pydantic-settings>=2.13.1
    requests>=2.32.5
    urllib3>=2.6.3

[options.extras_require]
dev =
    black>=26.3.0
    flake8
    isort>=8.0.1
    pre-commit
    pylint>=4.0.5
    pytest>=8.3.4
    pytest-cov>=5.2.0
    pytest-xdist>=3.4.0

[options.packages.find]
where=src

[tool:wheel]
universal = 1

[flake8]
exclude =
    venv,
    .tox,
    .git,
    __pycache__,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
max-line-length = 80

[tox:tox]
envlist = py38,unittest,lint

[testenv]
basepython=python3.8
deps =
    ipython
    pylint
    pytest
    pytest-cov
    pytest-xdist
    flake8

#testenv:unittest]
#ommands=
#   pytest -v -s -n auto -l --cov=bsapilib --cov-report term-missing --cov-report xml --no-cov-on-fail tests/unit

[testenv:lint]
commands=
    flake8 src/tb-utils
    pylint src/tb-utils
